Assignment1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assignment1-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        ports: 
        - containerPort: 80
