Gova Deployment(gova-app).yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: govadeployment1
spec:
 replicas: 3
 selector:
  matchLabels:
   app: govapp
 template:
  metadata:
   labels:
    app: govapp
  spec:
   containers:
   - name: govacontainer
     image: nginx
     ports:
     - containerPort: 80
