Govadeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: govadeployment
spec:
 replicas: 4
 selector:
  matchLabels:
   type: frontend
 template:
  metadata:
   labels:
    type: frontend
  spec:
   containers:
   - name: govacontainer
     image: nginx
     ports:
     - containerPort: 80
