Gova Services.yml
apiVersion: v1
kind: Service
metadata:
 name: govaservice
spec:
 selector:
   app: govaapp
 type: NodePort
 ports:
 - protocol: "TCP"
   port: 80
   targetPort: 80
