Assignment5(ingress).yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 ingressClassName: nginx
 rules:
  - http:
     paths:
     - path: /nginx 
       pathType: Prefix 
       backend: 
         service: 
           name: ngnix 
           port: 
             number: 80
